[tool.poetry]
name = "ml-models"
version = "0.1.0"
description = ""
authors = ["Pedro Serpa <pedroserpah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.15.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.32"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
tensorflow = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
